add semi working OI analyzer fix

--- a/ObjectInitializerAnalyzer/ObjectInitializerAnalyzer.csproj
+++ b/ObjectInitializerAnalyzer/ObjectInitializerAnalyzer.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ObjectInitializerAnalyzer.cs" />
+    <Compile Include="ObjectInitializerFixProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
