--- a/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1.csproj
@@ -121,15 +121,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Analyzer Include="..\LonelyIfAnalyzer\LonelyIfAnalyzer\bin\Debug\LonelyIfAnalyzer.dll" />
+    <Analyzer Include="..\ObjectInitializerAnalyzer\bin\Debug\ObjectInitializerAnalyzer.dll" />
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.0.0-rc1\tools\analyzers\C#\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.CodeAnalysis.Analyzers.1.0.0-rc1\tools\analyzers\Microsoft.CodeAnalysis.Analyzers.dll" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\LonelyIfAnalyzer\LonelyIfAnalyzer\LonelyIfAnalyzer.csproj">
-      <Project>{168ae47c-bb7a-4122-bd6d-d26a2c614557}</Project>
-      <Name>LonelyIfAnalyzer</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
